
                CHANGES IN party VERSION 0.9-15 (2007-09-xx)

    o   new defaults for `control' argument of `cforest': unbiased
        forests are now grown by default

    o   new defaults for binary classification tree visualization:
        stacked bar charts are used by default.


                CHANGES IN party VERSION 0.9-14 (2007-07-23)

    o   fix problem in `varimp' introduced by new weights handling


                CHANGES IN party VERSION 0.9-13 (2007-07-23)

    o   update `mvt.f'

    o   improve the memory footprint of RandomForest objects
        substancially (by removing the weights slots from each node).
        
        More careful revision of the predict and fitting code is needed.

    o   predictions for cforest with multivariate response are
        now returned in a matrix (should be a data.frame)

    o   remove confusing `no admissible split found' warning 
        (which simply meant that the `minsplit' wasn't met).


                CHANGES IN party VERSION 0.9-12 (2007-06-28)

    o   adjust to coin 0.6-4


                CHANGES IN party VERSION 0.9-11 (2007-06-11)

    o   populate `where' slot in `mob' objects.

    o   `mob_control' now has an `na.action' argument

    o   cforest with replace = FALSE, fraction = ...
        can now deal with weights (spotted by Carolin Strobl
        <carolin.strobl@stat.uni-muenchen.de>)

    o   interface to LAPACK (`dgesdd' for computing a SVD)
        directly. As a side-effect, the svdmem class can be 
        simplified and no memory allocation during 
        tree growing is necessary (which results in a measureable
        performance gain)


                CHANGES IN party VERSION 0.9-10 (2007-02-28)

    o   internal infrastructure for fit(x, y) interfaces,
        including a VariableFrame method for matrices.

    o   deal with factors with only one level and variables where
        all observations are NA

    o   don't compute design matrices in `ModelEnvFormula'

