@@ -33,3 +33,9 @@ o  ctree(, na.action = na.pass, ...) ? und fuer cforest auch!
 
 
 o  check storage mode of ordinal variables and fix varimp
+
+o  missing values and splitting: weights isn't adjusted for functions in
+   Split.c
+
+o  implement splits in binary factors without looking at statistics (check
+   only minsplit)
